# chext-template

./: .gitignore  README.md  manage.py  project.json
_manage/: cli.py  cmake.py  project.py  scanner.py
_manage/templates/: module_structured.scala.j2  sysc_tb.cpp.j2  testbench.scala.j2
chisel_rtl/: .gitignore  .scalafmt.conf  build.sbt  sysc_tb
chisel_rtl/project/: .gitignore
chisel_rtl/src/main/scala/chext_template/: Example.scala  TransducerExample.scala  TransformExample.scala
chisel_rtl/tests/chext_template/: Example.tb.scala  TransducerExample.tb.scala  TransformExample.tb.scala
doc/: chext-dataflow-rulebook.md  manage.md
sysc_tb/: .gitignore  CMakeLists.txt  protocols.py
sysc_tb/_common/verilog/: chext_mem_1w1r.sv  chext_syncmem_1w1r.sv
sysc_tb/chext_template/: CMakeLists.txt
sysc_tb/chext_template/hdl/: TransformExample.hdlinfo.json  TransformExample.moduleGraph.json  TransformExample.sv
sysc_tb/chext_template/src/: TransducerExample.tb.cpp  TransformExample.tb.cpp
sysc_tb/src/chext_template/: Example.tb.cpp
tools/chext_template/: __init__.py  cli.py  cmake.py  files.py  names.py  project.py  render.py  scanner.py
tools/chext_template/templates/: module_plain.scala.j2  module_structured.scala.j2  sysc_tb.cpp.j2  tb_elastic.scala.j2  tb_plain.scala.j2
